Prefer Exif DateTimeOriginal for sorting images (DateTimeDigitized and DateTime only used as fallback)

BUG: 139264

svn path=/trunk/extragear/graphics/digikam/; revision=627043